# itafest-backend

./: .env.example  .firebaserc  Makefile  README.md  create_project_structure.sh  deno.json  insomnia_collection.json  pyproject.toml
app/: main.py  streamlit_app.py
app/core/: config.py
app/models/: __init__.py  business.py  category.py  event.py  message.py  notification.py  promotion.py  review.py  ticket.py  user.py  user_profile.py
app/routers/: __init__.py  business.py  event.py  message.py  notification.py  promotion.py  review.py  ticket.py  user.py  user_profile.py
app/services/: business.py  event.py  message.py  notification.py  promotion.py  review.py  ticket.py  user.py  user_profile.py
data/: firebase-export-metadata.json
firebase/: firestore.rules  storage.rules
scripts/: test-firebase-auth.sh  test-setup.sh
src/: app.ts
src/api/controllers/: ad.controller.ts  auth.controller.ts  business.controller.ts  category.controller.ts  event.controller.ts  tag.controller.ts
src/api/middlewares/: auth.middleware.ts  error.middleware.ts
src/api/routes/: ad.routes.ts  auth.routes.ts  business.routes.ts  category.routes.ts  event.routes.ts  tag.routes.ts
src/config/: env.config.ts  firebase.config.ts
src/services/: ad.service.ts  business.service.ts  category.service.ts  event.service.ts  tag.service.ts
src/types/: ad.types.ts  business.types.ts  category.types.ts  event.types.ts  role.types.ts  tag.types.ts  user.types.ts
src/utils/: firebase-admin.ts
tests/integration/: auth.test.ts
